# HS2_Manager

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
data/: zipmod_record.txt
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: zipmod_info_list.csv  zipmod_info_list_raw.csv
src-tauri/src/: config.toml  error.rs  main.rs
src-tauri/src/pages/: mod.rs  zipmod.rs
src-tauri/src/utils/: config.rs  files.rs
src/utils/: mod.rs
src/views/: Home.vue
src/views/zipmod/: index.vue
src/zipmod/: mod.rs
